--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <h1>My HTML adventure</h1>
   <p>
   We're writing HTML markup to display in our <strong>browser</strong>.
-  We're basically telling computers what to do. <em>Neat!</em>
+  We're basically telling computers what to do. <em>Neat!</em> We're writing <a href="https://developer.mozilla.org/en-US/docs/Web/HTML">HTML</a> markup to display in our <strong>browser</strong>.
 </p>
 </body>
 </html>
